hphp/test/zend/bad/ext/spl/tests/iterator_035.php
<?php
	
$tmp = 1;

$a = new ArrayIterator();
$a[] = $tmp;
$a[] = &$tmp;

echo "Done\n";
?>